--- a/jobtoc.yml
+++ b/jobtoc.yml
@@ -1,5 +1,6 @@
 ---
 output: "C:\\data\\tocgraphs\\"
 type: "neo4j"
+limit: 1000
 folders:
   - folder: "C:\\git\\ms\\azure-stack-docs-pr\\azure-stack\\operator"
