--- a/jobtoc.yml
+++ b/jobtoc.yml
@@ -3,4 +3,4 @@ output: "C:\\data\\tocgraphs\\"
 type: "neo4j"
 limit: 1000
 folders:
-  - folder: "C:\\git\\ms\\azure-stack-docs-pr\\azure-stack\\operator"
+  - folder: "C:\\git\\zz\\hack24"
